# ottw

./: .clang-format  .clang-tidy  .gitignore  .prettierrc.yaml  CMakeLists.txt  Makefile  flake.nix
nix/: formatter.nix  package.nix
share/: gresource.xml
share/css/: bar.scss
share/xml/: bar.ui
src/: bar.c  bar.h  main.c  resource.h
